--- a/Les-Zones-Bleues/quiz.html
+++ b/Les-Zones-Bleues/quiz.html
@@ -75,7 +75,7 @@
 									<br>Préparez-vous à débuter!
 								</p>
 
-							<div class="container">
+							<div id="container" style = "display: none">
 										<div class="row" id="boiteChoix">
 											<div class="col-sm text-center btnChoix shadow-sm" id="btnChoix1">
 												<div id="txtChoix0"></div>
