--- a/Les-Zones-Bleues/quiz.html
+++ b/Les-Zones-Bleues/quiz.html
@@ -50,10 +50,10 @@
 
 			<div class="row" style="padding:1em;">
 				<div class="col-6">
-					<h3>Question # <span id="noQuestionCourante">1</span></h3>
+					<h3 id = "endScreen">Question # <span id="noQuestionCourante">1</span></h3>
 				</div>
 				<div class="col-6 text-right">
-					<h3>Pointage: <span id="totalPoints">0</span>/<span id="totalQuestions"></span></h3>
+					<h3>Pointage: <span id="totalPoints">0</span>/<span id="totalQuestions">5</span></h3>
 				</div>
 			</div>
 		
@@ -75,7 +75,7 @@
 									<br>Préparez-vous à débuter!
 								</p>
 
-							<div id="container" style = "display: none">
+							<div id="container" style="display: none">
 										<div class="row" id="boiteChoix">
 											<div class="col-sm text-center btnChoix shadow-sm" id="btnChoix1">
 												<div id="txtChoix0"></div>
