--- a/Les-Zones-Bleues/quiz.html
+++ b/Les-Zones-Bleues/quiz.html
@@ -74,6 +74,7 @@
 									Bienvenue au jeu questionnaire La Vérité sur la Santé!
 									<br>Préparez-vous à débuter!
 								</p>
+								<h2 id= "score final"></h2>
 
 							<div id="container" style="display: none">
 										<div class="row" id="boiteChoix">
